2002-12-31  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* fvwm/fvwm.1.in:
	* fvwm/builtins.c (ReadTitleButton):
	* fvwm/screen.h:
	new button state shortcuts AllActiveUp, AllActiveDown,
	AllInactiveUp, AllInactiveDown

2002-12-31  olicha  <olivier.chapuis@free.fr>

	* libs/PictureGraphics.c (PCopyArea):
	Fixed rendering of depth 1 pixmap with a mask

	* fvwm/update.c (apply_window_updates):
	Fixed icon bg cset update

	* fvwm/events.c (HandlePropertyNotify):
	* fvwm/geometry.c (move_icon_to_position):
	Fixed non shaped icons with a bg padding but without cs bg

	* NEWS:
	* fvwm/style.c (style_parse_icon_size_style):
	(merge_styles):
	* fvwm/fvwm.h (window_style):
	* fvwm/add_window.c (setup_icon_size_limits):
	* fvwm/icons.c (SetIconPixmapSize):
	(GetIconPicture):
	New option to IconSize style: Adjusted, Streched, Shrunk

	* fvwm/icons.c (SetIconPixmapSize):
	(GetIconPicture):
	Always center the icon with IconSize if the icon has a background

2002-12-30  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	FvwmWindowMenu renaming; compact long diagnostics into half of line

	* NEWS:
	documeted and corrected new features

	* fvwm/fvwm.1.in:
	removed a "deprecated" tag from TitleStyle/ButtonStyle/BorderStyle
	since these are the only way currently to create themes

	* fvwm/fvwm.c:
	small reformatting

2002-12-30  olicha  <olivier.chapuis@free.fr>

	* NEWS: 
	* fvwm/icons.c (setup_icon_title_size):
	(set_icon_pixmap_background):
	(CreateIconWindow):
	(DrawIconTitleWindow):
	(DrawIconPixmapWindow):
	(DrawIconWindow):
	(ChangeIconPixmap):
	(RedoIconName):
	* fvwm/events.c (HandleEnterNotify):
	(HandleExpose):
	(HandleLeaveNotify):
	(HandlePropertyNotify):
	* fvwm/borders.c (border_draw_decorations):
	* fvwm/default.h:
	* fvwm/fvwm.h:
	* fvwm/add_window.c (setup_icon_background_parameters):
	(setup_icon_title_parameters):
	(setup_style_and_decor):
	(setup_icon_font):
	* fvwm/geometry.c (move_icon_to_position): 
	* fvwm/style.h: