@@ -7641,7 +7641,7 @@ definitions can be specified per line.
 is a subset of the available button styles, and can only be
 .I TiledPixmap
 (uniform pixmaps which match the bevel colors work best this
-way). If a
+way) or Colorset. If a
 .RI ' ! '
 is prefixed to any
 .IR flag ,
@@ -7893,7 +7893,15 @@ styles).  Thus, if stacking styles with
 .BR AddButtonStyle " (or " AddTitleStyle
 for title-bars), use care in sequencing styles to minimize redraw.
 
-The available styles and their arguments now follow.
+.\"needs_lang_check
+The available styles are:
+
+.IR Simple ", " Default ", " Solid ", " Colorset ", " Vector ,
+.IR ?Gradient ", " Pixmap ", " AdjustedPixmap ,
+.IR ShrunkPixmap ", " StretchedPixmap ", " TiledPixmap ", " MiniIcon
+
+The description of these styles and their arguments now follow.
+.\"end
 
 The
 .I Simple
@@ -7915,6 +7923,22 @@ The
 style fills the button with a solid color.  The relief border
 color is not affected.  The color should be specified as a single
 argument.  This style is fully destructive.
+
+.\"needs_lang_check
+The
+.IR Colorset " " cs " [" alpha "]"
+style fills the button with the Colorset
+.IR cs .
+The optional
+.I alpha
+argument is a percentage between 0 and 100.
+It causes fvwm to merge the colorset background onto the button using this
+percentage. If the percentage is 0 the colorset background is hidden and
+if it is 100 the colorset background is fully applied. The default is 100.
+So, the destructivity depends on the
+.I alpha
+argument.
+.\"end
 
 The
 .I "Vector num"
@@ -7995,6 +8019,34 @@ These can be used to justify the pixmap (default is centered for
 both directions).  Pixmap transparency is used for the color
 "None."  This style is partially destructive.
 
+.\"needs_lang_check
+The
+.I AdjustedPixmap
+style is similar to the
+.I Pixmap
+style. But the image is resized to exactly fit the button.
+
+The
+.I ShrunkPixmap
+style is similar to the
+.I Pixmap
+style. But if the image is bigger than the button, then the image is resized
+to fit into the button.
+
+The
+.I StretchedPixmap
+style is similar to the
+.I Pixmap
+style. But if the image is smaller than the button, then the image is resized
+to cover the button.
+.\"end
+
+The
+.I TiledPixmap
+style accepts a pixmap to be tiled as the button background. One
+pixmap is specified as an argument.  Pixmap transparency is not
+used.  This style is fully destructive.
+
 The
 .I MiniIcon
 style draws the window's miniature icon in the button, which is
@@ -8010,11 +8062,7 @@ Style Emacs MiniIcon mini-doc.xpm
 
 ButtonStyle 1 MiniIcon
 .EE
-The
-.I TiledPixmap
-style accepts a pixmap to be tiled as the button background. One
-pixmap is specified as an argument.  Pixmap transparency is not
-used.  This style is fully destructive.
+
 
 .TP
 .BI "ButtonStyle " button " - [!]" flag " ..."
@@ -8217,40 +8265,56 @@ For a flattened look:
 TitleStyle -- flat
 ButtonStyle All Active (-- flat) Inactive (-- flat)
 .EE
+
+.\"needs_lang_check
 .B TitleStyle
-in addition to a simple
-.I TiledPixmap
-accepts an additional powerful
-.IR MultiPixmap
-option. This allows you to specify different pixmaps for different
-parts of the titlebar. Some of them are tiled or stretched to fit
-a particular space; others are discrete "transition" pixmaps which
-are not resized in any way. The definable pixmaps are:
+accepts all the
+.B ButtonStyle
+.IR style ":"
+
+.IR Simple ", " Default ", " Solid ", " Colorset ", " Vector ,
+.IR ?Gradient ", " Pixmap ", " AdjustedPixmap ,
+.IR ShrunkPixmap ", " StretchedPixmap ", " TiledPixmap ", " MiniIcon  .
+
+See the
+.B ButtonStyle
+command for a description of all these styles and their arguments.
+
+In addition to these styles
+.B TitleStyle
+accepts a powerful
+.B MultiPixmap
+option. This allows you to specify different pixmaps, Colorset or
+colours for different parts of the titlebar. Some of them are tiled or
+stretched to fit a particular space; others are discrete "transition"
+images. The definable
+.I sections
+are:
 .EX
-.IB "Main (tiled" / "stretched)"
-  The main titlebar pixmap
-.IB "LeftMain (tiled" / "stretched)"
+.I Main
+  The full titlebar
+.I LeftMain
   Left of title text
-.IB "RightMain (tiled" / "stretched)"
+.I RightMain
   Right of title text
-.IB "UnderText (tiled" / "stretched)"
+.I UnderText
   Underneath title text
 .I LeftOfText
-  Pixmap just to the left of the title text
+  just to the left of the title text
 .I RightOfText
-  Pixmap just to the right of the title text
+  just to the right of the title text
 .I LeftEnd
-  Pixmap at the far left end of the titlebar
+  at the far left end of the titlebar
   (just after left buttons if any)
 .I RightEnd
-  Pixmap at the far right end of the titlebar
+  at the far right end of the titlebar
   (just before right buttons if any)
-.I Buttons (tiled)
-  Tiled under buttons in case of UseTitleStyle
-.I LeftButtons (tiled)
-  Tiled under left buttons in case of UseTitleStyle
-.I RightButtons (tiled)
-  Tiled under right buttons in case of UseTitleStyle
+.I Buttons
+  under buttons in case of UseTitleStyle
+.I LeftButtons
+  under left buttons in case of UseTitleStyle
+.I RightButtons
+  under right buttons in case of UseTitleStyle
 .EE
 None of these are mandatory except for
 .I Main
@@ -8268,20 +8332,36 @@ are used as appropriate.
 
 The syntax for this style type is:
 .EX
-MultiPixmap <section> (<flag>) <pixmap filename>, ...
+MultiPixmap section style arg, ...
 .EE
-continuing for whatever pixmaps you want to define. By default,
-all non-transition pixmaps are tiled. If you want one stretched
-instead (this is allowed for
-.IR Main ", " LeftMain ", " RightMain ", and " UnderText "),"
-add
-.I (stretched)
-after the section name:
+continuing for whatever you want to define. The
+.I style
+can be either
+.IR TiledPixmap ", " AdjustedPixmap ", " Colorset " or " Solid .
+See the
+.B ButtonStyle
+command for the description of these styles.
+In the case of a transition section,
+.IR LeftEnd ", " LeftOfText ", " RightOfText " or " RightEnd ","
+.I AdjustedPixmap
+only resize the pixmap in the "y" direction. For the
+.IR Colorset " and " Solid
+styles a width of the half of the title bar height is assumed
+for the transition sections.
+
+An example:
 .EX
-MultiPixmap Main (stretched) foo.xpm, UnderText bar.xpm
+MultiPixmap Main AdjustedPixmap foo.xpm, \\
+            UnderText TiledPixmap bar.xpm, \\
+            Buttons Colorset 2
 .EE
-Otherwise you can omit
-.IR (<flag>) ", as shown with " UnderText .
+Note that the old syntax is still supported: if the style is omitted,
+.I TiledPixmap
+is assumed and adding "(stretched)" between the section and the
+file name implies
+.IR AdjustedPixmap .
+
+\."end
 
 .TP
 .BI "UpdateDecor [" decor "]"
